@@ -2,12 +2,12 @@
 
 sleep 60
 
-java -jar --enable-preview -Dspring.profiles.active=demo bl-web-app.jar &
+java -jar -Dspring.profiles.active=demo bl-web-app.jar &
 
 sleep 60
 
-java -jar --enable-preview -Dspring.profiles.active=demo bl-sensor-data-collector.jar &
+java -jar -Dspring.profiles.active=demo bl-sensor-data-collector.jar &
 
-java -jar --enable-preview -Dspring.profiles.active=demo bl-merchandise-data-collector.jar &
+java -jar -Dspring.profiles.active=demo bl-merchandise-data-collector.jar &
 
 tail -f /dev/null
